Fixed spacing issues on mobile for top profile

--- a/src/style.css
+++ b/src/style.css
@@ -159,6 +159,11 @@ body::before {
   filter: url(#noiseFilter);
 }
 
+.no-break {
+  white-space: nowrap;
+  font: inherit;
+}
+
 header {
   height: 68px;
   display: flex;
@@ -1709,11 +1714,16 @@ footer {
     display: none !important;
   }
 
+  section#profile {
+    padding-top: 130px;
+  }
+
   .top-profile-container {
     align-self: center;
     flex-direction: column;
     gap: 70px;
-    height: 90vh;
+    padding-bottom: 100px;
+    /* height: 90dvh; */
   }
 
   .top-profile-container h1 {
@@ -1796,8 +1806,8 @@ footer {
 
   .name-card h4 .lang-text[lang="ja"],
   .hometown-card p .lang-text[lang="ja"] {
-    font-size: clamp(1.3rem, 1.2vw, 1.5rem);
-    margin-left: 0;
+    font-size: clamp(1.1rem, 1.2vw, 1.5rem);
+    margin-bottom: 10px;
   }
 
   .name-card p .lang-text[lang="ja"] {
@@ -1844,7 +1854,12 @@ footer {
   }
 
   .hometown-card > p:nth-child(3) > span:nth-child(2) {
-    font-size: clamp(0.95rem, 1.4vw, 1.3rem) !important;
+    /* font-size: clamp(0.95rem, 1.4vw, 1.3rem) !important; */
+    display: none !important;
+  }
+
+  .hometown-card .location-container .lang-text[lang="ja"] {
+    font-size: clamp(1.3rem, 1.2vw, 1.5rem);
   }
 
   .hobbies-card ul {
@@ -1853,7 +1868,7 @@ footer {
   }
 
   .hobbies-card ul li span {
-    font-size: clamp(0.95rem, 1.4vw, 1.3rem) !important;
+    font-size: clamp(1.3rem, 1.2vw, 1.5rem) !important;
   }
 
   .fun-card {
